--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
@@ -14,4 +17,16 @@ header {
 
 main {
   padding: 0 3rem;
+}
+
+.add-bagel form {
+  width: 300px;
+}
+
+
+.add-bagel input, [type=submit] {
+  display: block;
+  width: 100%;
+  padding: .5rem;
+  margin-bottom: 1rem;
 }
