edit still not working, saving at a stopping place.

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,13 @@ body {
 
 header {
   padding: 3rem;
+  background-color: beige;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  
 }
 
 main {
