--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 
 header {
   padding: 3rem;
-  background-color: beige;
+  background-color: rgb(250, 250, 107);
   position: fixed;
   display: flex;
   align-items: center;
